Tue Nov 17 08:23:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.idl
        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector_exec.h
        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver.idl
        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp
        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h
        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp
        * connectors/dds4ccm/examples/Quoter/Broker/Broker_exec.cpp
        * connectors/dds4ccm/examples/Quoter/Broker/Broker_exec.h
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.idl
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.h
        * connectors/dds4ccm/examples/Quoter/descriptors/Plan.cdp
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor.idl
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.cpp
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.h
        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector.idl
        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector_exec.h
        * connectors/dds4ccm/examples/Shapes/descriptors/Plan.cdp
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver.idl
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.h
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender.idl
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.cpp
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.h
        * connectors/dds4ccm/idl/ccm_dds.idl
        * connectors/dds4ccm/idl/ccm_ddsC.h
        * connectors/dds4ccm/idl/ccm_ddsS.h
        * connectors/dds4ccm/idl/dds4ccm.mpc
        * connectors/dds4ccm/idl/dds4ccm_Base.idl